# rosnik-python

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
prompthq/: __init__.py  api.py  client.py  collector.py  types.py  utils.py
promptly/: __init__.py  api.py  client.py  collector.py  env.py  openai.py  types.py  utils.py
rosnik/: __init__.py  api.py  client.py  collector.py  config.py  constants.py  env.py  headers.py  interaction.py  journey.py  state.py  utils.py  wrap.py
rosnik/events/: ai.py  queue.py  user.py
rosnik/frameworks/: django.py  flask.py  flask_rosnik.py
rosnik/providers/: openai.py  openai_v1.py
rosnik/types/: ai.py  core.py  user.py
tests/: conftest.py  test_ai_events.py  test_api.py  test_client.py  test_collector.py  test_config.py  test_events.py  test_flask_rosnik.py  test_openai.py  test_state.py  test_wrap.py
tests/cassettes/test_ai_events/: test_chat_completion.yaml  test_event_with_context.yaml  test_event_with_context__streaming.yaml  test_event_with_context_manager.yaml  test_event_with_context_manager__stacked.yaml  test_event_with_error_doesnt_raise.yaml
tests/cassettes/test_flask_rosnik/: test_flask.yaml  test_flask_multiple_requests.yaml  test_flask_single.yaml  test_flask_with_context.yaml  test_no_headers.yaml
tests/cassettes/test_openai/: test_chat_completion.yaml  test_chat_completion__azure.yaml  test_chat_completion__azure__engine.yaml  test_chat_completion__streaming.yaml  test_chat_completion__streaming__azure.yaml  test_chat_completion__with_user.yaml  test_completion.yaml  test_error.yaml
tests/e2e/: test_e2e_openai.py
tests/e2e/cassettes/test_e2e_openai/: test_e2e_chat_completion.yaml
tests/frameworks/: test_django.py
tests/frameworks/cassettes/test_django/: test_middleware_headers.yaml  test_no_headers.yaml
tests/providers/: test_openai_v1.py
tests/providers/cassettes/test_openai_v1/: test_chat_completion.yaml  test_chat_completion__azure.yaml  test_chat_completion__with_user.yaml  test_completion.yaml  test_multiple_clients.yaml
