[tool.poetry]
name = "promptly"
version = "0.0.1"
description = "Promptly Python SDK"
authors = ["Nick DiRienzo <me@nickdirienzo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
# Target 3.8+ since that's receiving patches through 2025
python = ">=3.8"

[tool.poetry.group.static.dependencies]
bandit = "^1.7"
safety = "^2.3"
black = "^23.3.0"
mypy = "^0.730.0"
ruff = "^0.0.267"

[tool.poetry.group.test.dependencies]
pytest = "^5.0"
pytest-cov = "^2.7"
pytest-mock = "^1.10"

[tool.poetry.extras]
openai = ["openai"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Needs to be the same as Ruff
line-length = 100