[tool.poetry]
name = "prompthq"
version = "0.0.3"
description = "PromptHQ Python SDK"
authors = ["Nick DiRienzo <me@nickdirienzo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
# Target 3.8+ since that's receiving patches through 2025
# Don't support 4 yet.
python = ">=3.8,<4"
openai = {version = "^0.27.6", optional = true}

[tool.poetry.group.static.dependencies]
bandit = "^1.7"
safety = "^2.3"
black = "^23.3.0"
mypy = "^0.730.0"
ruff = "^0.0.267"
poetry-dotenv-plugin = "^0.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^5.0"
pytest-cov = "^2.7"
pytest-mock = "^1.10"
pytest-recording = "^0.12.2"

[tool.poetry.extras]
openai = ["openai"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100